--add-opens has no effect at compile time